// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container> Render 1`] = `
<div
  className='container mx-auto'
/>
`;

exports[`<Container> Render with children 1`] = `
<div
  className='container mx-auto'
>
  <div>
    Some content
  </div>
</div>
`;
